<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="phoneAppLabel" product="default">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="callFailed_cb_enabled">You can\'t make outgoing calls while call barring is on.</string>
    <string name="callFailed_incoming_cb_enabled">Party has barred all Incoming calls.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="callUnanswered_forwarded">Call Unanswered and Forwarded</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="enter_input">USSD message must be between <xliff:g id="min_len" >%d</xliff:g> and <xliff:g id="max_len" >%d</xliff:g> characters. Please try again.</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="modify_call_prompt_yes">Yes</string>
    <string name="modify_call_prompt_no">No</string>
    <string name="modify_call_failure_str">Modify Call request failed\n</string>
    <string name="modify_call_option_title">Which type of call?</string>
    <string name="modify_call_option_vt">VT</string>
    <string name="modify_call_option_vt_tx">Video transmit</string>
    <string name="modify_call_option_vt_rx">Video receive</string>
    <string name="modify_call_option_voice">Voice Only</string>
    <string name="accept_modify_call_request_prompt">Accept modify call request?</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled">Forwarding all calls to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="data_enabled">Data enabled</string>
    <string name="data_enable_summary">Enable data access over Mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="cell_broadcast_sms">Cell Broadcast SMS</string>
    <string name="enable_disable_cell_bc_sms">Cell Broadcast SMS</string>
    <string name="cell_bc_sms_enable">Cell Broadcast SMS enabled</string>
    <string name="cell_bc_sms_disable">Cell Broadcast SMS disabled</string>
    <string name="cb_sms_settings">Cell Broadcast SMS settings</string>
    <string name="enable_disable_emergency_broadcast">Emergency Broadcast</string>
    <string name="emergency_broadcast_enable">Emergency Broadcast enabled</string>
    <string name="emergency_broadcast_disable">Emergency Broadcast disabled</string>
    <string name="enable_disable_administrative">Administrative</string>
    <string name="administrative_enable">Administrative enabled</string>
    <string name="administrative_disable">Administrative disabled</string>
    <string name="enable_disable_maintenance">Maintenance</string>
    <string name="maintenance_enable">Maintenance enabled</string>
    <string name="maintenance_disable">Maintenance disabled</string>
    <string name="general_news_settings">General News</string>
    <string name="bf_news_settings">Business and Financial News</string>
    <string name="sports_news_settings">Sports News</string>
    <string name="entertainment_news_settings">Entertainment News</string>
    <string name="enable_disable_local">Local</string>
    <string name="local_enable">Local news enabled</string>
    <string name="local_disable">Local news disabled</string>
    <string name="enable_disable_regional">Regional</string>
    <string name="regional_enable">Regional news enabled</string>
    <string name="regional_disable">Regional news disabled</string>
    <string name="enable_disable_national">National</string>
    <string name="national_enable">National news enabled</string>
    <string name="national_disable">National news disabled</string>
    <string name="enable_disable_international">International</string>
    <string name="international_enable">International news enabled</string>
    <string name="international_disable">International news disabled</string>
    <string name="list_language_title">Language</string>
    <string name="list_language_summary">Select the news language</string>
    <string name="list_language_dtitle">Languages</string>
    <string name="enable_disable_local_weather">Local Weather</string>
    <string name="local_weather_enable">Local Weather enabled</string>
    <string name="local_weather_disable">Local Weather disabled</string>
    <string name="enable_disable_atr">Area Traffic Reports</string>
    <string name="atr_enable">Area Traffic Reports enabled</string>
    <string name="atr_disable">Area Traffic Reports disabled</string>
    <string name="enable_disable_lafs">Local Airport Flight Schedules</string>
    <string name="lafs_enable">Local Airport Flight Schedules enabled</string>
    <string name="lafs_disable">Local Airport Flight Schedules disabled</string>
    <string name="enable_disable_restaurants">Restaurants</string>
    <string name="restaurants_enable">Restaurants enabled</string>
    <string name="restaurants_disable">Restaurants disabled</string>
    <string name="enable_disable_lodgings">Lodgings</string>
    <string name="lodgings_enable">Lodgings enabled</string>
    <string name="lodgings_disable">Lodgings disabled</string>
    <string name="enable_disable_retail_directory">Retail Directory</string>
    <string name="retail_directory_enable">Retail Directory enabled</string>
    <string name="retail_directory_disable">Retail Directory disabled</string>
    <string name="enable_disable_advertisements">Advertisements</string>
    <string name="advertisements_enable">Advertisements enabled</string>
    <string name="advertisements_disable">Advertisements disabled</string>
    <string name="enable_disable_stock_quotes">Stock Quotes</string>
    <string name="stock_quotes_enable">Stock Quotes enabled</string>
    <string name="stock_quotes_disable">Stock Quotes disabled</string>
    <string name="enable_disable_eo">Employment Opportunities</string>
    <string name="eo_enable">Employment Opportunities enabled</string>
    <string name="eo_disable">Employment Opportunities disabled</string>
    <string name="enable_disable_mhh">Medical, Health, and Hospital</string>
    <string name="mhh_enable">Medical, Health, and Hospital enabled</string>
    <string name="mhh_disable">Medical, Health, and Hospital disabled</string>
    <string name="enable_disable_technology_news">Technology News</string>
    <string name="technology_news_enable">Technology News enabled</string>
    <string name="technology_news_disable">Technology News disabled</string>
    <string name="enable_disable_multi_category">Multi-category</string>
    <string name="multi_category_enable">Multi-category enabled</string>
    <string name="multi_category_disable">Multi-category disabled</string>
    <string name="default_preference_summary">&lt;Not set&gt;</string>
    <string translatable="false" name="domain_address">SipDomain</string>
    <string name="ims_edit_title">IMS account details</string>
    <string name="ims_domain_address_title">IMS Server</string>
    <string translatable="false" name="call_type">CallType</string>
    <string name="call_type_title">IMS Call type</string>
    <string translatable="false" name="default_ims_call_type">Voice</string>
    <string translatable="false" name="use_ims_default">UseImsDefault</string>
    <string name="use_ims_default_title">Use IMS Always</string>
    <string name="use_ims_default_summary">Use IMS for all voice calls</string>
    <string name="aurora_cf_dialog_title">Call Forward To This Number</string>
</resources>